@@ -62,6 +62,9 @@ Indices:
     Index, indices,
     i, j, k, l, p, q, r, s
 
+Spatial coordinate:
+    x (tetrahedron.x)
+
 Scalar to tensor expression conversion:
     as_tensor, as_vector, as_matrix
 
@@ -183,10 +186,9 @@ from ufl.formoperators import replace, derivative, action, energy_norm, rhs, lhs
 
 # Predefined convenience objects
 from ufl.objects import vertex, interval, triangle, tetrahedron, quadrilateral, hexahedron, facet,\
-                     i, j, k, l, p, q, r, s, \
-                     R1, R2, R3, \
-                     dx, ds, dS, dE, dc
+    i, j, k, l, p, q, r, s, \
+    R1, R2, R3, \
+    dx, ds, dS, dE, dc, x
 
 # Useful constants
 from math import e, pi
-
